aria2c,fallback and new strategy

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<lang:html>
+<html lang="pt-BR">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>YTDLN Open</title>
 </head>
 <body>
     <h1>YTDLN Open</h1>
-    
     <p>
         <label for="videoUrl">Video URL:</label>
         <input type="text" id="videoUrl" size="50" placeholder="Cole a URL do vídeo aqui">
