--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="renderer.js"></script>
-</body>
+</head>
+<body>
     <div class="frame-container">
         <div class="background">
 
@@ -63,7 +63,7 @@
                         <div id="status" class="console-text">Ready to download...</div>
                     </div>
                 </div>
-
+                
                 <div class="downloads-section">
                     <div class="downloads-title">Downloads</div>
                     <div class="downloads-container" id="downloadsContainer">
@@ -204,5 +204,6 @@
             </div>
         </div>
     </div>
+    <script src="renderer.js"></script>
 </body>
 </html>
