--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 
             <div class="title-frame">
                 <div class="title-row">
+                    <icon class="title-icon" src="assets/logo.ico"></icon>
                     <div class="title">YTDLN-OPEN</div>
                 </div>
                 <div class="build-version">buildv0.0.1</div>
@@ -70,6 +71,16 @@
                         <div class="no-downloads-message">
                             <div class="no-downloads-text">No downloads yet</div>
                             <div class="no-downloads-subtext">Start a download to see completed files here</div>
+                        </div>
+                        
+                        <!-- Content Loader -->
+                        <div class="content-loader" id="contentLoader" style="display: none;">
+                            <div class="loader">
+                                <div class="box1"></div>
+                                <div class="box2"></div>
+                                <div class="box3"></div>
+                            </div>
+                            <div class="loader-text">Loading...</div>
                         </div>
                     </div>
                 </div>
