Update index.html to use an image logo, enhance download button with visual states in renderer.js, and improve styling in style.css for better layout and animations.

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
             <div class="title-frame">
                 <div class="title-row">
-                    <icon class="title-icon" src="assets/logo.ico"></icon>
+                    <img class="title-icon" src="../assets/logo_2048x2048.png" alt="YTDLN-OPEN Logo">
                     <div class="title">YTDLN-OPEN</div>
                 </div>
                 <div class="build-version">buildv0.0.1</div>
