--- a/browser-extension/src/popup.html
+++ b/browser-extension/src/popup.html
@@ -230,7 +230,7 @@
   <div class="container">
     <div class="header">
       <h1>🎥 YTDLN</h1>
-      <p>Download com Stream</p>
+      <p>Download de Vídeos</p>
     </div>
 
     <div class="server-status disconnected" id="serverStatus">
@@ -282,6 +282,7 @@
         <div class="progress-text" id="progressText">Iniciando download...</div>
       </div>
     </form>
+
   </div>
 
   <script src="popup.js"></script>
