refactor: Reorganize project structure and consolidate documentation
- Remove obsolete documentation files (FINAL_SOLUTION.md, STREAMING_FIX_SUMMARY.md, TEST_RESULTS.md)
- Migrate background script from root to proper extension structure
- Consolidate popup files from root into extension/popup directory
- Add library integrity validation module (src/main/library-integrity.js)
- Reorganize test suite with new integrity and thumbnail flow tests
- Update build configuration with PowerShell build script (build-extension.ps1)
- Add extension logo asset (extension/icons/logo_2048x2048.png)
- Update VSCode SonarLint project configuration
- Fix GitHub repository links in README.md documentation
- Refactor video downloader and library manager modules
- Update UI styles for checkbox and general styling
- Consolidate extension configuration and remove duplicate manifest files
- Streamline project layout for better maintainability and clarity

--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -5,16 +5,20 @@
     <title>YTDLN-OPEN - Configurações</title>
     <link rel="stylesheet" href="options.css" />
     <link
+      
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="main-layout">
         <aside class="sidebar">
             <div class="sidebar-header">
                 <img src="../icons/icon128.png" alt="Logo">
-                <h2>YTDLN</h2>
+                <h2>Settings</h2>
             </div>
             <nav class="tabs">
                 <button class="tab-btn active" data-tab="basic">
