--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -2,131 +2,273 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <style>
-      body {
-        width: 250px;
-        padding: 15px;
-        font-family:
-          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-          Arial, sans-serif;
-        background: #1a1a1a;
-        color: white;
-        text-align: center;
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
+
+      body {
+        width: 360px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        background: #1a1a1a;
+        color: #e5e5e5;
+      }
+
       .container {
         display: flex;
         flex-direction: column;
-        gap: 12px;
+        height: 100vh;
+        background: #1a1a1a;
       }
-      h2 {
-        margin: 0;
-        font-size: 16px;
-        color: #ff0000;
+
+      /* Header */
+      .header {
+        padding: 16px;
+        border-bottom: 1px solid #333;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
       }
-      button {
-        padding: 10px;
+
+      .header-content {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .header-logo {
+        width: 24px;
+        height: 24px;
+        border-radius: 4px;
+      }
+
+      .header-title {
+        font-size: 14px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+      }
+
+      .settings-btn {
+        background: none;
         border: none;
-        border-radius: 6px;
-        background: #ff0000;
-        color: white;
-        font-weight: bold;
+        color: #999;
         cursor: pointer;
-        transition: background 0.2s;
+        padding: 4px;
+        transition: color 0.2s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
-      button:hover {
-        background: #cc0000;
+
+      .settings-btn:hover {
+        color: #e5e5e5;
       }
-      .info {
+
+      .material-icons {
+        font-size: 20px;
+        user-select: none;
+      }
+
+      /* Main Content */
+      .content {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+        padding: 16px;
+        gap: 16px;
+      }
+
+      /* URL Input Section */
+      .input-section {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      .input-label {
         font-size: 12px;
-        color: #aaa;
+        font-weight: 500;
+        color: #999;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+      }
+
+      .url-input {
+        background: #2a2a2a;
+        border: 1px solid #404040;
+        color: #e5e5e5;
+        padding: 12px;
+        font-family: inherit;
+        font-size: 13px;
+        outline: none;
+        transition: all 0.2s;
+        border-radius: 4px;
+      }
+
+      .url-input:focus {
+        background: #333;
+        border-color: #e5e5e5;
+      }
+
+      .url-input::placeholder {
+        color: #666;
+      }
+
+      /* Download Button */
+      .download-btn {
+        background: #e5e5e5;
+        border: none;
+        color: #1a1a1a;
+        padding: 12px 16px;
+        font-family: inherit;
+        font-size: 13px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        cursor: pointer;
+        transition: all 0.2s;
+        border-radius: 4px;
+      }
+
+      .download-btn:hover {
+        background: #ffffff;
+      }
+
+      .download-btn:active {
+        transform: scale(0.98);
+      }
+
+      /* Downloads Queue */
+      .queue-section {
+        display: none;
+        flex-direction: column;
+        gap: 8px;
+        border-top: 1px solid #333;
+        padding-top: 12px;
+      }
+
+      .queue-section.active {
+        display: flex;
+      }
+
+      .queue-label {
+        font-size: 12px;
+        font-weight: 500;
+        color: #999;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+      }
+
+      .downloads-list {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        max-height: 200px;
+        overflow-y: auto;
+      }
+
+      .job-item {
+        background: #2a2a2a;
+        border: 1px solid #404040;
+        padding: 10px 12px;
+        font-size: 12px;
+        border-radius: 4px;
+        transition: all 0.2s;
+      }
+
+      .job-item:hover {
+        background: #333;
+        border-color: #555;
+      }
+
+      .job-title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        margin-bottom: 6px;
+        color: #e5e5e5;
+        font-weight: 500;
+      }
+
+      .progress-bar-bg {
+        height: 2px;
+        background: #404040;
+        margin-bottom: 6px;
+        border-radius: 1px;
+        overflow: hidden;
+      }
+
+      .progress-bar-fill {
+        height: 100%;
+        background: #e5e5e5;
+        transition: width 0.3s;
+      }
+
+      .job-meta {
+        display: flex;
+        justify-content: space-between;
+        font-size: 11px;
+        color: #666;
+      }
+
+      /* Scrollbar */
+      .content::-webkit-scrollbar,
+      .downloads-list::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .content::-webkit-scrollbar-track,
+      .downloads-list::-webkit-scrollbar-track {
+        background: transparent;
+      }
+
+      .content::-webkit-scrollbar-thumb,
+      .downloads-list::-webkit-scrollbar-thumb {
+        background: #404040;
+        border-radius: 3px;
+      }
+
+      .content::-webkit-scrollbar-thumb:hover,
+      .downloads-list::-webkit-scrollbar-thumb:hover {
+        background: #555;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div
-        style="
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          margin-bottom: 5px;
-        "
-      >
-        <h2>YTDLN-OPEN</h2>
-        <button
-          id="settingsBtn"
-          style="
-            background: none;
-            padding: 5px;
-            color: #aaa;
-            cursor: pointer;
-            font-size: 18px;
-          "
-        >
-          ⚙️
+      <div class="header">
+        <div class="header-content">
+          <img src="../icons/icon48.png" alt="YTDLN" class="header-logo" />
+          <div class="header-title">YTDLN</div>
+        </div>
+        <button class="settings-btn" id="settingsBtn" title="Configurações">
+          <span class="material-icons">settings</span>
         </button>
       </div>
-      <p class="info">Baixar vídeo desta página?</p>
-      <button id="downloadBtn">Abrir no App</button>
 
-      <div
-        id="downloads-container"
-        style="
-          display: none;
-          border-top: 1px solid #333;
-          margin-top: 10px;
-          padding-top: 10px;
-          text-align: left;
-        "
-      >
-        <div
-          style="
-            font-size: 11px;
-            color: #888;
-            margin-bottom: 8px;
-            font-weight: bold;
-            text-transform: uppercase;
-          "
-        >
-          Downloads Ativos
+      <div class="content">
+        <div class="input-section">
+          <label class="input-label">URL</label>
+          <input
+            type="text"
+            id="urlInput"
+            class="url-input"
+            placeholder="Cole a URL do vídeo"
+          />
         </div>
-        <div id="downloads-list"></div>
+
+        <button class="download-btn" id="downloadBtn">Baixar</button>
+
+        <div class="queue-section" id="downloadsContainer">
+          <div class="queue-label">Downloads</div>
+          <div class="downloads-list" id="downloadsList"></div>
+        </div>
       </div>
     </div>
-    <style>
-      .job-item {
-        margin-bottom: 10px;
-        background: #222;
-        padding: 8px;
-        border-radius: 4px;
-        font-size: 12px;
-      }
-      .job-title {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-bottom: 4px;
-        color: #ddd;
-      }
-      .progress-bar-bg {
-        height: 4px;
-        background: #333;
-        border-radius: 2px;
-        overflow: hidden;
-      }
-      .progress-bar-fill {
-        height: 100%;
-        background: #ff0000;
-        transition: width 0.3s;
-      }
-      .job-meta {
-        display: flex;
-        justify-content: space-between;
-        font-size: 10px;
-        color: #777;
-        margin-top: 4px;
-      }
-    </style>
+
     <script src="popup.js"></script>
   </body>
 </html>
