--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -12,6 +12,7 @@
 
       body {
         width: 360px;
+        min-height: 500px;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
         background: #1a1a1a;
         color: #e5e5e5;
@@ -95,6 +96,8 @@
         color: #999;
         text-transform: uppercase;
         letter-spacing: 0.5px;
+        line-height: 1.4;
+        min-height: 16px;
       }
 
       .url-input {
